added prometheus metrics and services
