# app/controllers/app.go
@@ -29,10 +29,12 @@ func NewAppController() {
 // @Description Welcome will return the welcome message as response with status code as 200
 // @Tags System status
 // @Success 200 {object} models.Base
-// @Produce  json,xml
+// @Produce  json
 // @Router / [get]
 func (controller appController) Welcome(ctx *gin.Context) response.Response {
-	responseContent := models.SecretResponse{}
+	responseContent := map[string]interface{}{
+		"Message": "Welcome to Secret server :)",
+	}
 	responseStruct := response.NewResponse(ctx).
 		SetResponse(responseContent).
 		SetError(nil).
