# app/models/secret.go
@@ -1,6 +1,9 @@
 package models
 
-import "time"
+import (
+	"github.com/go-ozzo/ozzo-validation"
+	"time"
+)
 
 type Secret struct {
 	ID             string
@@ -8,7 +11,7 @@ type Secret struct {
 	CreatedAt      time.Time
 	ExpiresAt      time.Time
 	MaxViews       int
-	RemainingViews time.Time
+	RemViews int
 }
 
 type SecretResponse struct {
@@ -16,5 +19,21 @@ type SecretResponse struct {
 	SecretText     string    `xml:"secretText,attr" json:"secretText"`
 	CreatedAt      time.Time `xml:"createdAt,attr" json:"createdAt"`
 	ExpiresAt      time.Time `xml:"expiresAt,attr" json:"expiresAt"`
-	RemainingViews time.Time `xml:"remainingViews,attr" json:"remainingViews"`
+	RemainingViews int `xml:"remainingViews,attr" json:"remainingViews"`
+}
+
+type SecretRequest struct {
+	SecretText       string
+	ExpireAfterViews int
+	ExpireAfter      int
+	IModel
+}
+
+func (s SecretRequest) Validate() error {
+	return validation.ValidateStruct(
+		&s,
+		validation.Field(&s.SecretText, validation.Required),
+		validation.Field(&s.ExpireAfterViews, validation.Required),
+		validation.Field(&s.ExpireAfterViews, validation.Required),
+	)
 }
