# docs/swagger/swagger.json
@@ -14,8 +14,7 @@
             "get": {
                 "description": "Welcome will return the welcome message as response with status code as 200",
                 "produces": [
-                    "application/json",
-                    "text/xml"
+                    "application/json"
                 ],
                 "tags": [
                     "System status"
@@ -56,19 +55,77 @@
         "/secret": {
             "post": {
                 "description": "Add a new secret",
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
                 "produces": [
-                    "application/json"
+                    "application/json",
+                    "text/xml"
                 ],
                 "tags": [
                     "secret"
                 ],
                 "summary": "Add a new secret",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "This text will be saved as a secret",
+                        "name": "secret",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "The secret won't be available after the given number of views. It must be greater than 0.",
+                        "name": "expireAfterViews",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "The secret won't be available after the given time. The value is provided in minutes. 0 means never expires",
+                        "name": "expireAfter",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "type": "object",
-                            "$ref": "#/definitions/models.Secret"
+                            "$ref": "#/definitions/models.SecretResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/secret/{hash}": {
+            "get": {
+                "description": "Get a secret by ID",
+                "produces": [
+                    "application/json",
+                    "text/xml"
+                ],
+                "tags": [
+                    "secret"
+                ],
+                "summary": "Get a secret by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Unique hash to identify the secret",
+                        "name": "hash",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/models.SecretResponse"
                         }
                     }
                 }
@@ -108,7 +165,7 @@
                 }
             }
         },
-        "models.Secret": {
+        "models.SecretResponse": {
             "type": "object",
             "properties": {
                 "createdAt": {
@@ -117,14 +174,11 @@
                 "expiresAt": {
                     "type": "string"
                 },
-                "id": {
+                "hash": {
                     "type": "string"
-                },
-                "maxViews": {
-                    "type": "integer"
                 },
                 "remainingViews": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "secretText": {
                     "type": "string"
